[package]
name = "fuse-http"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jsen-/fuse-http"

[profile.release-min-size]
inherits = "release"
strip = true
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
opt-level = "z"

[dependencies]
byte-unit = { version = "4.0.14", default-features = false }
clap = { version = "4.3.1", features = ["derive"] }
daemonize = "0.5.0"
env_logger = { version = "0.10.0", default-features = false, features = ["humantime"] }
fuser = { version = "0.12.0", default-features = false, features = ["abi-7-31"] }
libc = { version = "0.2.125", default-features = false }
log = { version = "0.4.17", default-features = false }
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls"] }
thiserror = "1.0.31"
